--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   <title>Corteslabs</title>
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Dosis:400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
 
 </head>
 <body>
