--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
 </body>
 </html>
