--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
   <link href="https://fonts.googleapis.com/css?family=Dosis:400" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
 
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
   <app-root></app-root>
